# academis_sphinx_theme

./: README.md  pyproject.toml  requirements.txt  setup.py
academis_sphinx_theme/: __init__.py  theme.conf
academis_sphinx_theme/static/: academis.css
